--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="task-list">
         <h2>Tasks</h2>
             <div id="tasks">
-                  <div class="task">
+                <!-- <div class="task">
                     <div class="content">
                         <input type="text" class="text"  value="my tasks" readonly>
                     </div>
@@ -29,6 +29,15 @@
                         <button class="delete">Delete</button>
                     </div>
                   </div>
+                  <div class="task">
+                    <div class="content">
+                        <input type="text" class="text"  value="my tasks" readonly>
+                    </div>
+                    <div class="actions">
+                        <button class="edit">Edit</button>
+                        <button class="delete">Delete</button>
+                    </div>
+                  </div>>--> 
             </div>
     </section>
    </main>
